--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+    
+    <div class="flex-container">
+        <div class="title"><h1>Etch-a-Sketch</h1></div>
+        <div class="content">
+            <div class="board"></div>
+            <div class="buttons">
+                <button onclick="">Black</button>
+                <button onclick="">Eraser</button>
+                <button onclick="">Random</button>
+                <button>Reset</button>
+            </div>
+        </div>
+        <input type="text" name="" id="" placeholder="Size of sketchpad" value="16" onchange="changeBoard(this.value)">
+        <button>Set Size</button>
+    </div>
+  
     
 </body>
 </html>
