--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
-                <button onclick="">Black</button>
-                <button onclick="">Eraser</button>
-                <button onclick="">Random</button>
-                <button>Reset</button>
+                <button onclick="changeColor('black')">Black</button>
+                <button onclick="changeColor('white')">Eraser</button>
+                <button onclick="changeColor('random')">Random</button>
+                <input type="color" name="" id="colorPicker" onchange="changeColor(this.value)">
+                <button onclick="changeBoard(16)">Reset</button>
             </div>
         </div>
         <input type="text" name="" id="" placeholder="Size of sketchpad" value="16" onchange="changeBoard(this.value)">
+       
         <button>Set Size</button>
     </div>
   
