--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <div class="flex-container">
         <div class="title"><h1>Etch-a-Sketch</h1></div>
+        <div class="mode">Mode : Click to color</div>
         <div class="content">
             <div class="board"></div>
             <div class="buttons">
